--- a/sass/layout/_hotel-view.scss
+++ b/sass/layout/_hotel-view.scss
@@ -2,3 +2,188 @@
     background: white;
     flex: 1;
 }
+
+.gallery {
+    display: flex;
+    &__image {
+        width: 100%;
+        display: block; // to remove spaces under the image
+    }
+}
+
+.overview {
+    border-bottom: var(--line);
+    display: flex;
+    align-items: center;
+
+    &__heading {
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 2.25rem;
+        letter-spacing: 1px;
+        padding: 1.5rem 3rem;
+    }
+
+    &__icon {
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary);
+
+        &--location {
+            margin-right: 0.5rem;
+        }
+    }
+
+    &__stars {
+        margin-right: auto;
+        display: flex; // it removed the space below the icon and now it centered. also removed the space between each other
+    }
+
+    &__location {
+        display: flex;
+        align-items: center;
+        font-size: 1.2rem;
+    }
+
+    &__rating {
+        background: var(--color-primary);
+        color: white;
+        margin-left: 3rem;
+        text-align: center;
+        padding: 1rem 2rem;
+    }
+
+    &__rating-average {
+        font-size: 2.25rem;
+        font-weight: 300;
+        margin-bottom: -3px;
+    }
+
+    &__rating-count {
+        font-size: 0.8rem;
+        text-transform: uppercase;
+    }
+}
+
+.button-inline {
+    border: none;
+    cursor: pointer;
+    background: none;
+    font: inherit; //  inherits the font size and family
+    color: var(--color-primary);
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    display: inline-block;
+    transition: 0.2s;
+
+    &:hover {
+        color: var(--color-grey-dark-1);
+    }
+
+    &:focus {
+        animation: pulsate 1s infinite;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scaleY(1);
+        box-shadow: none;
+    }
+
+    50% {
+        transform: scaleY(1.05);
+        box-shadow: 0 1rem 4rem rgba(0,0,0,0.2); 
+    }
+
+    100% {
+        transform: scaleY(1);
+        box-shadow: none;
+    }
+}
+
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    font-size: 1.4rem;
+    background: white;
+    box-shadow: var(--shadow-light);
+    flex: 0 0 60%;
+    padding: 3rem;
+    margin-right: 4.5rem;
+}
+
+
+.paragraph:not(:last-of-type) {
+    margin-bottom: 2rem;
+}
+
+.list {
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-top: var(--line);
+    border-bottom: var(--line);
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+        flex: 0 0 50%;
+        margin-bottom: 0.7rem;
+
+        &::before {
+            content: "";
+            display: inline-block;
+            height: 1rem;
+            width: 1rem;
+            margin-right: 0.7rem;
+
+            // for older browsers
+            // background-image: url(../img/chevron-thin-right.svg);
+            // background-size: cover;
+
+            background: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+        }
+    }
+}
+
+.recommend {
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    display: flex;
+    align-items: center;
+
+    &__count {
+
+    }
+
+    &__friends {
+        margin-left: auto;
+    }
+
+    &__image {
+        height: 4rem;
+        width: 4rem;
+        border: 2px solid white;
+        border-radius: 50%;
+        box-sizing: content-box; // i disabled the border-box property because i don't want the image to shrink
+
+        &:not(:last-child) {
+            margin-right: -1.5rem;
+        }
+    }
+
+}
+
+.user-reviews {
+    background: blue;
+    flex: 1;
+}
