--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -2,4 +2,75 @@
     background: var(--color-grey-dark-1);
     //shorthand for grow, shrink and basis
     flex: 0 0 18%;
+    height: 50rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.side-nav {
+    font-size: 1.4rem;
+    list-style: none;
+    margin-top: 3.5rem;
+
+
+    &__item {
+        position: relative;
+        &:not(:last-child) {
+            margin-bottom: 0.5rem;
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 3px;
+            background: var(--color-primary);
+            transform: scaleY(0);
+            transition: 
+                transform 0.3s, 
+                width 0.3s cubic-bezier(1,0,0,1) 0.3s,
+                background-color 0.2s;
+        }
+
+        &:active::before {
+            background: var(--color-primary-dark);
+        }
+
+        &:hover::before,
+        &--active::before {
+            transform: scaleY(1);
+            width: 100%;
+        }
+    }
+
+    &__link:link,
+    &__link:visited {
+        color: var(--color-grey-light-1);
+        text-transform: uppercase;
+        text-decoration: none;
+        display: block;
+        padding: 1.5rem 3rem;
+        display: flex;
+        align-items: center;
+        position: relative; // i need to make the position relative so i can apply the z-index
+        z-index: 5;
+    }
+
+    &__icon {
+        height: 1.75rem;
+        width: 1.75rem;
+        background: none;
+        margin-right: 2rem;
+        fill: currentColor; // inherits the color from the parent element
+    }
+}
+
+.legal {
+    font-size: 1.2rem;
+    color: var(--color-grey-light-4);
+    text-align: center;
+    padding: 2.5rem;
 }
