--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,7 @@ body {
   max-width: 120rem;
   margin: 8rem auto;
   background: var(--color-grey-light-1);
-  box-shadow: var(--shadow-dark);
-  min-height: 50rem; }
+  box-shadow: var(--shadow-dark); }
 
 .content {
   display: flex; }
@@ -211,8 +210,13 @@ body {
   padding-bottom: 2px;
   display: inline-block;
   transition: 0.2s; }
+  .button-inline__arrow {
+    margin-left: 3px;
+    transition: margin-left 0.2s; }
   .button-inline:hover {
     color: var(--color-grey-dark-1); }
+    .button-inline:hover .button-inline__arrow {
+      margin-left: 8px; }
   .button-inline:focus {
     animation: pulsate 1s infinite; }
 
@@ -231,10 +235,10 @@ body {
   display: flex;
   padding: 4.5rem;
   background: var(--color-grey-light-1);
-  border-bottom: var(--line); }
+  border-bottom: var(--line);
+  font-size: 1.4rem; }
 
 .description {
-  font-size: 1.4rem;
   background: white;
   box-shadow: var(--shadow-light);
   flex: 0 0 60%;
@@ -282,13 +286,100 @@ body {
       margin-right: -1.5rem; }
 
 .user-reviews {
-  background: blue;
-  flex: 1; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.review {
+  background: white;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden; }
+  .review:last-of-type {
+    margin-bottom: auto; }
+  .review__text {
+    margin-bottom: 2rem;
+    z-index: 2;
+    position: relative; }
+  .review__user {
+    display: flex;
+    align-items: center; }
+  .review__image {
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem; }
+  .review__user-box {
+    display: flex;
+    flex-direction: column; }
+  .review__user-name {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.1rem; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3); }
+  .review__rating {
+    margin-left: auto;
+    font-size: 2rem;
+    color: var(--color-primary); }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    z-index: 1;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif; }
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center; }
+  .cta__book-now {
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-bottom: 5rem; }
+
+.button {
+  font-family: inherit;
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 2.5rem 10rem;
+  border-radius: 10rem;
+  border: none;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: white;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative; }
+  .button > * {
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.2s; }
+  .button__invisible {
+    transform: translate(-50%, -250%); }
+  .button:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
+    .button:hover .button__visible {
+      top: 150%; }
+    .button:hover .button__invisible {
+      top: 132.5%; }
+  .button:focus {
+    animation: pulsate 1s infinite; }
 
 .sidebar {
   background: var(--color-grey-dark-1);
   flex: 0 0 18%;
-  height: 50rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
