--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -4,5 +4,8 @@
     background: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
 
-    min-height: 50rem;
+}
+
+.content {
+    display: flex;
 }
