--- a/sass/layout/_hotel-view.scss
+++ b/sass/layout/_hotel-view.scss
@@ -5,6 +5,7 @@
 
 .gallery {
     display: flex;
+    
     &__image {
         width: 100%;
         display: block; // to remove spaces under the image
@@ -76,8 +77,17 @@
     display: inline-block;
     transition: 0.2s;
 
+    &__arrow {
+        margin-left: 3px;
+        transition: margin-left 0.2s;
+    }
+
     &:hover {
         color: var(--color-grey-dark-1);
+
+        .button-inline__arrow {
+            margin-left: 8px;
+        }
     }
 
     &:focus {
@@ -108,10 +118,10 @@
     padding: 4.5rem;
     background: var(--color-grey-light-1);
     border-bottom: var(--line);
+    font-size: 1.4rem;
 }
 
 .description {
-    font-size: 1.4rem;
     background: white;
     box-shadow: var(--shadow-light);
     flex: 0 0 60%;
@@ -161,10 +171,6 @@
     display: flex;
     align-items: center;
 
-    &__count {
-
-    }
-
     &__friends {
         margin-left: auto;
     }
@@ -184,6 +190,133 @@
 }
 
 .user-reviews {
-    background: blue;
     flex: 1;
+    // the next three rows are to position the button
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.review {
+    background: white;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+    overflow: hidden;
+
+    &:last-of-type {
+        margin-bottom: auto; // position the buttom at the bottom
+    }
+
+    &__text {
+        margin-bottom: 2rem;
+        z-index: 2;
+        position: relative; // i set the position for the z-index to work.
+
+    }
+
+    &__user {
+        display: flex;
+        align-items: center;
+    }
+
+    &__image {
+        width: 4.5rem;
+        height: 4.5rem;
+        border-radius: 50%;
+        margin-right: 1.5rem;
+    }
+
+    &__user-box {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__user-name {
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 1.1rem;
+    }
+
+    &__user-date {
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+    }
+
+    &__rating {
+        margin-left: auto;
+        font-size: 2rem;
+        color: var(--color-primary);
+        // font-weight: 300;
+    }
+
+    &::before {
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 20rem;
+        z-index: 1;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+    }
+}
+
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now {
+        font-size: 1.5rem;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin-bottom: 5rem;
+    }
+}
+
+.button {
+    font-family: inherit;
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    padding: 2.5rem 10rem;
+    border-radius: 10rem;
+    border: none;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: white;
+    overflow: hidden; // to hide the invisible button text 
+    cursor: pointer;
+    position: relative;
+
+    & > * {
+        width: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        transition: 0.2s;
+    }
+
+    &__invisible {
+        transform: translate(-50%, -250%);
+    }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+
+
+        .button__visible {
+            top: 150%;
+        }
+
+        .button__invisible {
+            top: 132.5%;
+        }
+    }
+
+    &:focus {
+        animation: pulsate 1s infinite;
+    }
 }
