--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -24,17 +24,9 @@ html {
     // This defines what 1 rem is
     font-size: 62.5%;  // 1rem = 10px; 10/16 = 62.5%
 
-    // @include respond(tab-land) {  // max-width: 1200px;
-    //     font-size: 56.25%;  // 1rem = 9px; 9/16 = 56.25%
-    // }
-
-    // @include respond(tab-port) {  // max-width: 900px;
-    //     font-size: 50%;   // 1rem = 8px; 8/16 = 50%
-    // }
-
-    // @include respond(big-desktop) {  // min-width: 1800px;
-    //     font-size: 75%;  // 1rem = 12px; 12/16 = 75%
-    // }
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;  // 1rem = 8px; 8/16 = 50%
+    }
 
 }
 
@@ -58,9 +50,6 @@ body {
     background-image: linear-gradient(to bottom right, var(--color-primary-light), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
-    // @include respond(tab-port) {  
-    //     padding: 0;
-    // }
 }
 
 ::selection {
