--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -4,8 +4,15 @@
     background: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
 
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+    }
 }
 
 .content {
     display: flex;
+    @media only screen and (max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
