--- a/sass/layout/_hotel-view.scss
+++ b/sass/layout/_hotel-view.scss
@@ -17,12 +17,21 @@
     display: flex;
     align-items: center;
 
+    // @media only screen and (max-width: $bp-medium) {
+    //     flex-direction: column;
+    // }
+
     &__heading {
         text-transform: uppercase;
         font-weight: 300;
         font-size: 2.25rem;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
     }
 
     &__icon {
@@ -52,6 +61,10 @@
         margin-left: 3rem;
         text-align: center;
         padding: 1rem 2rem;
+
+        @media only screen and (max-width: $bp-small) {
+            padding: 0.5rem 1rem;
+        }
     }
 
     &__rating-average {
@@ -63,6 +76,10 @@
     &__rating-count {
         font-size: 0.8rem;
         text-transform: uppercase;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 0.5rem;
+        }
     }
 }
 
@@ -119,6 +136,14 @@
     background: var(--color-grey-light-1);
     border-bottom: var(--line);
     font-size: 1.4rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        flex-direction: column;
+    }
 }
 
 .description {
@@ -127,6 +152,16 @@
     flex: 0 0 60%;
     padding: 3rem;
     margin-right: 4.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-right: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        margin-right: 0;
+        margin-bottom: 3rem;
+    }
 }
 
 
@@ -155,12 +190,14 @@
             margin-right: 0.7rem;
 
             // for older browsers
-            // background-image: url(../img/chevron-thin-right.svg);
-            // background-size: cover;
+            background-image: url(../img/chevron-thin-right.svg);
+            background-size: cover;
 
-            background: var(--color-primary);
-            -webkit-mask-image: url(../img/chevron-thin-right.svg);
-            -webkit-mask-size: cover;
+            @supports (-webkit-mask-image: url()) {
+                background: var(--color-primary);
+                -webkit-mask-image: url(../img/chevron-thin-right.svg);
+                -webkit-mask-size: cover;
+            }
         }
     }
 }
@@ -173,6 +210,7 @@
 
     &__friends {
         margin-left: auto;
+        display: flex; // i want the images to remian in the same row.
     }
 
     &__image {
@@ -183,7 +221,7 @@
         box-sizing: content-box; // i disabled the border-box property because i don't want the image to shrink
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 
@@ -205,8 +243,18 @@
     position: relative;
     overflow: hidden;
 
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
+
     &:last-of-type {
         margin-bottom: auto; // position the buttom at the bottom
+
+        @media only screen and (max-width: $bp-medium) {
+            margin-bottom: 3rem; 
+
+        }
     }
 
     &__text {
@@ -268,11 +316,16 @@
     padding: 3.5rem 0;
     text-align: center;
 
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+
+    }
+
     &__book-now {
         font-size: 1.5rem;
         font-weight: 400;
         text-transform: uppercase;
-        margin-bottom: 5rem;
+        margin-bottom: 3.5rem;
     }
 }
 
