--- a/sass/layout/_sidebar.scss
+++ b/sass/layout/_sidebar.scss
@@ -5,6 +5,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+
 }
 
 .side-nav {
@@ -12,12 +14,27 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width: $bp-medium) {
+        display: flex;
+        margin: 0;
+    }
+
 
     &__item {
         position: relative;
+
+        @media only screen and (max-width: $bp-medium) {
+            flex: 1;
+        }
+
         &:not(:last-child) {
             margin-bottom: 0.5rem;
+
+            @media only screen and (max-width: $bp-medium) {
+                margin: 0;
+            }
         }
+
 
         &::before {
             content: "";
@@ -50,12 +67,22 @@
         color: var(--color-grey-light-1);
         text-transform: uppercase;
         text-decoration: none;
-        display: block;
         padding: 1.5rem 3rem;
         display: flex;
         align-items: center;
         position: relative; // i need to make the position relative so i can apply the z-index
         z-index: 5;
+
+        @media only screen and (max-width: $bp-medium) {
+            align-items: center;  // now the flex is in the other direction so i have to align the items vertically again
+            padding: 2rem;
+        }
+
+        
+        @media only screen and (max-width: $bp-small) {
+            flex-direction: column;
+            padding: 1.2rem;
+        }    
     }
 
     &__icon {
@@ -64,6 +91,11 @@
         background: none;
         margin-right: 2rem;
         fill: currentColor; // inherits the color from the parent element
+
+        @media only screen and (max-width: $bp-small) {
+            margin-right: 0;
+            margin-bottom: 0.7rem;
+        }    
     }
 }
 
@@ -72,4 +104,8 @@
     color: var(--color-grey-light-4);
     text-align: center;
     padding: 2.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        display: none;
+    }
 }
